--- a/html/transition.html
+++ b/html/transition.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <header>
+
+    <h1>Transition Page</h1>
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
@@ -15,7 +18,7 @@
             <li><a href="contact.html">Contact</a></li>  
         </ul>
     </nav>
-    
+     </header>
     <h1>Transition Page</h1>
     
     <div class="box">
