--- a/html/animation.html
+++ b/html/animation.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <header>
+    <h1>Animation Page</h1>
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
@@ -15,7 +17,7 @@
             <li><a href="contact.html">Contact</a></li>  
         </ul>
     </nav>
-    
+</header>
     
     <h1>Animation Page</h1>
     <p>This is an animation</p>
