--- a/html/canvas.html
+++ b/html/canvas.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Canvas</title>
      
 </head>
 <body>
+    <header>
+        <h1>Canvas</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="transition.html">Transition</a></li>
+                <li><a href="googleMap.html">Map</a></li>
+                <li><a href="animation.html">Animation</a></li>
+                <li><a href="contact.html">Contact</a></li>  
+            </ul>
+        </nav>
+    </header>
     <canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
         Your browser does not support the HTML canvas tag.</canvas>
         <script>
