adding canvas page

--- a/html/googleMap.html
+++ b/html/googleMap.html
@@ -25,6 +25,8 @@
             <li><a href="transition.html">Transition</a></li>
             <li><a href="googleMap.html">Map</a></li>
             <li><a href="animation.html">Animation</a></li>
+            <li><a href="canvas.html">Canvas</a></li>
+
             <li><a href="contact.html">Contact</a></li>  
         </ul>
     </nav>
