--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
           <li><a href="html/transition.html">Transition</a></li>
           <li><a href="html/googleMap.html">Map</a></li>
           <li><a href="html/animation.html">Animation</a></li>
+          <li><a href="html/googleMap.html">Map</a></li>
+          <li><a href="html/canvas.html">Canvas</a></li>
           <li><a href="html/contact.html">Contact</a></li>  
+
         </ul>
       </nav>
     </header>
