--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-
+      <h1>Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -14,12 +14,12 @@
                 <li><a href="googleMap.html">Map</a></li>
                 <li><a href="animation.html">Animation</a></li>
                 <li><a href="canvas.html">Canvas</a></li>
-
+                <li><a href="xml.html">XML</a></li>
                 <li><a href="contact.html">Contact</a></li>  
             </ul>
         </nav>
         
-   <h1>Contact Us</h1>
+   
   </header>
   
 
