--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="html/animation.html">Animation</a></li>
           <li><a href="html/googleMap.html">Map</a></li>
           <li><a href="html/canvas.html">Canvas</a></li>
+          <li><a href="html/xml.html">XML</a></li>
           <li><a href="html/contact.html">Contact</a></li>  
 
         </ul>
