added webworker page, but isnt working yet. Also c

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="UTF-8">
-  <title>My Portfolio Website</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
+    <meta charset="UTF-8">
+    <title>My Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> <!-- Add this line back -->
+  </head>
+  
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +25,7 @@
           <li><a href="html/googleMap.html">Map</a></li>
           <li><a href="html/canvas.html">Canvas</a></li>
           <li><a href="html/xml.html">XML</a></li>
+          <li><a href="html/webworkers.html">Web Workers</a></li>
           <li><a href="html/contact.html">Contact</a></li>  
 
         </ul>
