--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <section>
         <h2>About Me</h2>
         <p>Hello world, my name is Jeff Shine, and this is my portfolio.</p>
+        <p>This portfolio will demonstrate my knowledge of HTML5, CSS3 and JavaScript</p>
       </section>
     </main>
     <footer>
