webworker counter fixed

--- a/webworkers.html
+++ b/webworkers.html
@@ -14,6 +14,9 @@ function clickCounter() {
     document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
   }
 }
+</script>
+<script>
+
 
 /* This is the web worker */
 var w;
@@ -21,7 +24,7 @@ var w;
 function startWorker() {
   if(typeof(Worker) !== "undefined") {
     if(typeof(w) == "undefined") {
-      w = new Worker("demo_workers.js");
+      w = new Worker("html/webworker.js");
     }
     w.onmessage = function(event) {
       document.getElementById("result1").innerHTML = event.data;
