--- a/webworkers.html
+++ b/webworkers.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XML</title>
+  <link rel="stylesheet" href="../style.css">
+</head>
+<!DOCTYPE html>
+<html>
+<body>
+<header>
+  <h1>Web Workers</h1>
+
+<nav>
+  <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="transition.html">Transition</a></li>
+      <li><a href="googleMap.html">Map</a></li>
+      <li><a href="animation.html">Animation</a></li>
+      <li><a href="canvas.html">Canvas</a></li>
+      <li><a href="xml.html">XML</a></li>
+      <li><a href="html/webworkers.html">Web Workers</a></li>
+      <li><a href="contact.html">Contact</a></li>  
+  </ul>
+</nav>
 <script>
 function clickCounter() {
   if (typeof(Storage) !== "undefined") {
