--- a/webworkers.html
+++ b/webworkers.html
@@ -21,7 +21,7 @@
       <li><a href="animation.html">Animation</a></li>
       <li><a href="canvas.html">Canvas</a></li>
       <li><a href="xml.html">XML</a></li>
-      <li><a href="html/webworkers.html">Web Workers</a></li>
+      <li><a href="webworkers.html">Web Workers</a></li>
       <li><a href="contact.html">Contact</a></li>  
   </ul>
 </nav>
