Files re structured webworker fixed

--- a/html/animation.html
+++ b/html/animation.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Animation Page</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
     <header>
     <h1>Animation Page</h1>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="transition.html">Transition</a></li>
-            <li><a href="googleMap.html">Map</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="canvas.html">Canvas</a></li>
-            <li><a href="xml.html">XML</a></li>
-            <li><a href="contact.html">Contact</a></li>  
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="transition.html">Transition</a></li>
+          <li><a href="googleMap.html">Map</a></li>
+          <li><a href="animation.html">Animation</a></li>
+          <li><a href="canvas.html">Canvas</a></li>
+          <li><a href="xml.html">XML</a></li>
+          <li><a href="webworkers.html">Web Workers</a></li>
+          <li><a href="contact.html">Contact</a></li>  
         </ul>
     </nav>
 </header>
