--- a/html/canvas.html
+++ b/html/canvas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Css/style.css">
      
 </head>
 <body>
@@ -19,6 +19,7 @@
                 <li><a href="animation.html">Animation</a></li>
                 <li><a href="canvas.html">Canvas</a></li>
                 <li><a href="xml.html">XML</a></li>
+                <li><a href="webworkers.html">Web Workers</a></li>
                 <li><a href="contact.html">Contact</a></li>  
             </ul>
         </nav>
@@ -31,7 +32,6 @@
             ctx.beginPath();
             ctx.arc(95,50,40,0,2*Math.PI);
             ctx.stroke();
-            </script>
-    
+        </script>
 </body>
 </html>
