--- a/html/geolocation.html
+++ b/html/geolocation.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <link rel="stylesheet" href="../Css/style.css">
     <title>Document</title>
     <style>
         p{
@@ -23,13 +24,22 @@
     </style>
 </head>
 <body>
-  <header></header>
-    
+  <header>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="transition.html">Transition</a></li>
+        <li><a href="googleMap.html">Map</a></li>
+        <li><a href="animation.html">Animation</a></li>
+        <li><a href="canvas.html">Canvas</a></li>
+        <li><a href="xml.html">XML</a></li>
+        <li><a href="webworkers.html">Web Workers</a></li>
+        <li><a href="contact.html">Contact</a></li>   
+      </ul>
+  </nav>
+  </header>
 
 <p>Click the button to get your coordinates.</p>
-
-
-
 
 <p id="para">Click the button to get your position.</p><!--changes to show lon/lat-->
 <button class="loc" onclick="getLocation()">Press to see the map and location</button>
