--- a/html/xml.html
+++ b/html/xml.html
@@ -6,25 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XML</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <!DOCTYPE html>
 <html>
 <body>
   <header>
     <h1>XML Request</h1>
-  
-<nav>
-    <ul>
+    <nav>
+      <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="transition.html">Transition</a></li>
         <li><a href="googleMap.html">Map</a></li>
         <li><a href="animation.html">Animation</a></li>
         <li><a href="canvas.html">Canvas</a></li>
         <li><a href="xml.html">XML</a></li>
-        <li><a href="contact.html">Contact</a></li>  
-    </ul>
-</nav>
+        <li><a href="webworkers.html">Web Workers</a></li>
+        <li><a href="contact.html">Contact</a></li>   
+      </ul>
+  </nav>
 </header>
   <h2>Football</h2>
   <p>
@@ -33,9 +33,6 @@
 <div id="demo">
 <button type="button" onclick="loadXMLDoc()">Premier League Teams</button>
 </div>
-  
-
-
 
 <script>
 function loadXMLDoc() {
