--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>My Portfolio Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Css/style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> <!-- Add this line back -->
   </head>
   
@@ -32,7 +32,7 @@
     </header>
     <main> 
       <div class="w3-container">
-      <img src="malahide-marina.jpeg" class="w3-greyscale-max" style="width:300px">
+      <img src="/Images/malahide-marina.jpeg" class="w3-greyscale-max" style="width:300px">
       </div>
       
       <section>
