--- a/html/googleMap.html
+++ b/html/googleMap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Geolocation</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 
 <style>
     #googleMap{
@@ -16,21 +16,20 @@
 </head>
 <body>
     <header>
-
-
         <h1>Implementing HTML Geolocation</h2>
-<nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="transition.html">Transition</a></li>
-            <li><a href="googleMap.html">Map</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="canvas.html">Canvas</a></li>
-            <li><a href="xml.html">XML</a></li>
-            <li><a href="contact.html">Contact</a></li>  
-        </ul>
-    </nav>
-</header>
+            <nav>
+                <ul>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="transition.html">Transition</a></li>
+                  <li><a href="googleMap.html">Map</a></li>
+                  <li><a href="animation.html">Animation</a></li>
+                  <li><a href="canvas.html">Canvas</a></li>
+                  <li><a href="xml.html">XML</a></li>
+                  <li><a href="webworkers.html">Web Workers</a></li>
+                  <li><a href="contact.html">Contact</a></li>   
+                </ul>
+            </nav>
+    </header>
 
 
 
