--- a/html/thumbnails.html
+++ b/html/thumbnails.html
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>JavaScript Image Gallery</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
   <nav>
     <ul>
       <li><a href="../index.html">Home</a></li>
       <li><a href="transition.html">Transition</a></li>
-      <li><a href="map.html">Map</a></li>
+      <li><a href="googleMap.html">Map</a></li>
       <li><a href="animation.html">Animation</a></li>
-      <li><a href="contact.html">Contact</a></li>  
+      <li><a href="canvas.html">Canvas</a></li>
+      <li><a href="xml.html">XML</a></li>
+      <li><a href="webworkers.html">Web Workers</a></li>
+      <li><a href="contact.html">Contact</a></li>   
     </ul>
-  </nav>
+</nav>
   <h1>JavaScript Image Gallery</h1>
   <div class="gallery-container">
     <div class="thumbnails">
