--- a/html/transition.html
+++ b/html/transition.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Transition Page</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
     <header>
@@ -11,13 +11,14 @@
     <h1>Transition Page</h1>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="transition.html">Transition</a></li>
-            <li><a href="googleMap.html">Map</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="canvas.html">Canvas</a></li>
-            <li><a href="xml.html">XML</a></li>
-            <li><a href="contact.html">Contact</a></li>  
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="transition.html">Transition</a></li>
+          <li><a href="googleMap.html">Map</a></li>
+          <li><a href="animation.html">Animation</a></li>
+          <li><a href="canvas.html">Canvas</a></li>
+          <li><a href="xml.html">XML</a></li>
+          <li><a href="webworkers.html">Web Workers</a></li>
+          <li><a href="contact.html">Contact</a></li>   
         </ul>
     </nav>
      </header>
