--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main> 
       <div class="w3-container">
-      <img src="/Images/malahide-marina.jpeg" class="w3-greyscale-max" style="width:300px">
+      <img src="Images/malahide-marina.jpeg" class="w3-greyscale-max" style="width:300px">
       </div>
       
       <section>
