--- a/html/contact.html
+++ b/html/contact.html
@@ -3,6 +3,8 @@
   <head>
     <title>Contact Us</title>
     <link type="text/css" rel="stylesheet" href="../Css/style.css"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
   </head>
   <body>
     <header>
