--- a/html/googleMap.html
+++ b/html/googleMap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Geolocation</title>
     <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <style>
     #googleMap{
