--- a/html/transition.html
+++ b/html/transition.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Transition Page</title>
     <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
 <body>
     <header>
