--- a/html/webworkers.html
+++ b/html/webworkers.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XML</title>
   <link rel="stylesheet" href="../Css/style.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
 <!DOCTYPE html>
 <html>
