--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>My Portfolio Website</title>
     <link rel="stylesheet" href="Css/style.css">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> Add this line back -->
+     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   
 
@@ -32,7 +32,7 @@
     </header>
     <main> 
       <div class="w3-container">
-      <img src="Images/malahide-marina.jpeg" class="w3-greyscale-max" style="width:300px">
+      <img src="Images/malahide-marina.jpeg" class="w3-hover-grayscale" style="width:300px">
       </div>
       
       <section>
@@ -45,3 +45,4 @@
     </footer>
   </body>
 </html>
+<img src="Images/malahide-marina.jpeg" class="w3-greyscale-max" style="width:300px">
