--- a/html/contact.html
+++ b/html/contact.html
@@ -32,6 +32,30 @@
       <textarea id="message" name="message" required></textarea>
       <input type="submit" value="Submit">
     </form>
+
+
+    <p>JS Validation form</p>
+    <form class="contact-us-form" onsubmit="return validateForm()">
+      <input
+        type="text"
+        name="fname"
+        id="fname"
+        placeholder="First Name"
+      /><br />
+      <input
+        type="text"
+        name="lname"
+        id="lname"
+        placeholder="Last Name"
+      /><br />
+      <input type="text" name="email" id="email" placeholder="E-mail" /><br />
+      <textarea type="text" id="message" placeholder="Your Message"></textarea
+      ><br />
+      <button type="submit" value="Submit" class="btn">Submit</button>
+    </form>
+
+
+    <script src="/html/form.js"></script>
   </body>
 </html>
 
