--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
         </nav>
   </header>
     <p>Fill out the form below to get in touch with us:</p>
-    <form>
+    <!-- <form> 
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
       <label for="email">Email:</label>
@@ -32,7 +32,7 @@
       <textarea id="message" name="message" required></textarea>
       <input type="submit" value="Submit">
     </form>
-
+  -->
 
     <p>JS Validation form</p>
     <form class="contact-us-form" onsubmit="return validateForm()">
