jquery page added

--- a/html/contact.html
+++ b/html/contact.html
@@ -18,6 +18,7 @@
               <li><a href="canvas.html">Canvas</a></li>
               <li><a href="xml.html">XML</a></li>
               <li><a href="webworkers.html">Web Workers</a></li>
+              <li><a href="jquery.html">Web Workers</a></li>
               <li><a href="contact.html">Contact</a></li>   
             </ul>
         </nav>
