--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="html/canvas.html">Canvas</a></li>
           <li><a href="html/xml.html">XML</a></li>
           <li><a href="html/webworkers.html">Web Workers</a></li>
+          <li><a href="jquery.html">JQuery</a></li>
           <li><a href="html/contact.html">Contact</a></li>  
 
         </ul>
