--- a/html/jquery.html
+++ b/html/jquery.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-    <h1>Animation Page</h1>
+    <h1>JQuery</h1>
     <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
