--- a/html/xml.html
+++ b/html/xml.html
@@ -24,6 +24,7 @@
         <li><a href="canvas.html">Canvas</a></li>
         <li><a href="xml.html">XML</a></li>
         <li><a href="webworkers.html">Web Workers</a></li>
+        <li><a href="jquery.html">JQuery</a></li>
         <li><a href="contact.html">Contact</a></li>   
       </ul>
   </nav>
